syntax = "proto3";

package proto;

option go_package = "github.com/Hargeon/compresssrv/pkg/proto";

service Compressor {
  rpc Compress(CompressRequest) returns (CompressResponse) {}
}

message CompressResponse {
  int32 code = 1;
}

message CompressRequest {
  int32 bitrate = 1;
  int32 resolutionX = 2;
  int32 resolutionY = 3;
  int32 ratioX = 4;
  int32 ratioY = 5;
  string video_id = 6;
  string video_service_id = 7;
}